deployment/app_deployment.yml
# deployment of main application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meli-proxy-deployment
spec:
  selector:
    matchLabels:
      app: meli-proxy
  replicas: 1
  template:
    metadata:
      labels:
        app: meli-proxy
    spec:
      containers:
      - name: meli-proxy
        image: lockhaven72/meli-proxy:latest
        resources:
          requests:
            memory: "100Mi"
            cpu: "200m"
          limits:
            memory: "1Gi"
            cpu: "1"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health/
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /health/
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 3
        volumeMounts:
        - name:  db-migration
          mountPath:  ./migrations
      volumes:
      - name:  db-migration
        persistentVolumeClaim:
          claimName: meli-proxy-pvc
