deployment/db_deployment.yml
# deployment of Postgresql db
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meli-proxy-db-deployment
spec:
  selector:
    matchLabels:
      app: meli-proxy-db
  replicas: 1
  template:
    metadata:
      labels:
        app: meli-proxy-db
    spec:
      containers:
      - name: postgresql
        image: postgres
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
