deployment/app_service.yml
apiVersion: v1
kind: Service
metadata:
  name: meli-proxy-service
spec:
  selector:
    app: meli-proxy
  type: NodePort
  ports:
  - port: 8080  # Service's out port. The connection is done using the  
    targetPort: 8080 # app's target port
