deployment/db_service.yml
apiVersion: v1
kind: Service
metadata:
  name: meli-proxy-db-service
spec:
  selector:
    app: meli-proxy-db
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
