deployment/monitoring_service.yml
apiVersion: v1
kind: Service
metadata:
  name: meli-proxy-monitoring-service
spec:
  selector:
    app: meli-proxy-monitoring
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
