deployment/app_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meli-proxy-ingress
  labels:
      name: meli-proxy
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: meli-proxy-service
            port:
              number: 8080
