deployment/metrics_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meli-proxy-metrics-ingress
  labels:
      name: meli-proxy-metrics
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: meli-proxy-metrics-service
            port:
              number: 9090
