deployment/monitoring_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meli-proxy-monitoring-ingress
  labels:
      name: meli-proxy-monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: www.meli-proxy-monitoring.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: meli-proxy-monitoring-service
            port:
              number: 80
